--- a/content/publication/asoc25/cite.bib
+++ b/content/publication/asoc25/cite.bib
@@ -1,8 +1,8 @@
 @article{asoc25,
-title = {Identifying Suicidal Ideations from Social Media Posts Using Deep Learning and Explainable AI-Driven Approach},
+title = {Identifying suicidal ideations from social media posts using deep learning and explainable AI-driven approach},
 author = {Md. Sabab Zulfiker and Nasrin Kabir and Al Amin Biswas and Md. Mashih Ibn Yasin Adan and Mohammad Shorif Uddin},
 journal = {Applied Soft Computing},
-volume = {00},
+volume = {184},
 pages = {113813},
 year = {2025},
 issn = {1568-4946},
